<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_sky"
    tools:context=".WeatherDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/gradiant_background"
        android:orientation="vertical"
        android:weightSum="6">
        <TextView
            android:id="@+id/text_title_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:layout_weight="1.1"
            android:text="@string/Pressure"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text30sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight=".9">
            <ImageView
                android:id="@+id/pressure"
                android:layout_width="@dimen/size60dp"
                android:layout_height="@dimen/size60dp"
                android:layout_marginLeft="@dimen/size40dp"
                android:src="@drawable/pressure"
                android:layout_centerVertical="true"
               />
            <TextView
                android:id="@+id/press_Value"
                android:layout_toRightOf="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size40dp"
                android:gravity="center"
                android:text="@string/Pressure"
                android:textColor="@color/colorText"
                android:textSize="@dimen/size40dp"
                android:textStyle="bold|italic"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/text_title_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:layout_weight="1.1"
            android:text="@string/Humidity"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text30sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight=".9">
            <ImageView
                android:id="@+id/humidity"
                android:layout_width="@dimen/size60dp"
                android:layout_height="@dimen/size60dp"
                android:layout_marginLeft="@dimen/size40dp"
                android:src="@drawable/humidity"
                android:layout_centerVertical="true" />
            <TextView
                android:id="@+id/humid_value"
                android:layout_toRightOf="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size40dp"
                android:gravity="center"
                android:text="@string/Humidity"
                android:textColor="@color/colorText"
                android:textSize="@dimen/size40dp"
                android:textStyle="bold|italic"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/text_title_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:layout_weight="1.1"
            android:text="@string/Wind"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text30sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight=".9">
            <ImageView
                android:id="@+id/wind"
                android:layout_width="@dimen/size70dp"
                android:layout_height="@dimen/size70dp"
                android:layout_marginLeft="@dimen/size40dp"
                android:src="@drawable/wind_white"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/wind_value"
                android:layout_toRightOf="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size40dp"
                android:text="@string/Wind"
                android:textColor="@color/colorText"
                android:textStyle="bold|italic"
                android:textSize="@dimen/size40dp"
               android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>