<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_sky"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">
                <RelativeLayout
                    android:id="@+id/relative_chennai"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size20dp"
                    android:layout_marginTop="@dimen/size20dp"
                    android:layout_marginRight="@dimen/size10dp"
                    android:layout_marginBottom="@dimen/size10dp"
                    android:background="@drawable/editloginshape"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/cityTitle_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/size20dp"
                        android:text="@string/CHENNAI"
                        android:textSize="@dimen/text18sp"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/whetherTitle_1"
                        android:layout_below="@+id/cityTitle_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorWhite"
                        android:text="@string/Temperature"/>
                    <ImageView
                        android:id="@+id/imgView_1"
                        android:layout_below="@+id/whetherTitle_1"
                        android:layout_marginTop="@dimen/size20dp"
                        android:layout_width="@dimen/size60dp"
                        android:layout_height="@dimen/size60dp"
                        android:src="@drawable/weather_icon"
                        android:layout_centerInParent="true"/>
                    <TextView
                        android:id="@+id/temperatureValue_1"
                        android:layout_below="@+id/imgView_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/value"
                        android:textSize="@dimen/text30sp"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_mumbai"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size10dp"
                    android:layout_marginTop="@dimen/size20dp"
                    android:layout_marginRight="@dimen/size20dp"
                    android:layout_marginBottom="@dimen/size10dp"
                    android:background="@drawable/editloginshape"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/cityTitle_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/size20dp"
                        android:text="@string/MUMBAI"
                        android:textSize="@dimen/text18sp"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/whetherTitle_2"
                        android:layout_below="@+id/cityTitle_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorWhite"
                        android:text="@string/Temperature"/>
                    <ImageView
                        android:id="@+id/imgView_2"
                        android:layout_below="@+id/whetherTitle_2"
                        android:layout_marginTop="@dimen/size20dp"
                        android:layout_width="@dimen/size60dp"
                        android:layout_height="@dimen/size60dp"
                        android:src="@drawable/weather_icon"
                        android:layout_centerInParent="true"/>
                    <TextView
                        android:id="@+id/temperatureValue_2"
                        android:layout_below="@+id/imgView_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/value"
                        android:textSize="@dimen/text30sp"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <RelativeLayout
                    android:id="@+id/relative_bangalore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size20dp"
                    android:layout_marginTop="@dimen/size10dp"
                    android:layout_marginRight="@dimen/size10dp"
                    android:layout_marginBottom="@dimen/size20dp"
                    android:background="@drawable/editloginshape"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/cityTitle_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/size20dp"
                        android:text="@string/BANGALORE"
                        android:textSize="@dimen/text18sp"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/whetherTitle_3"
                        android:layout_below="@+id/cityTitle_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorWhite"
                        android:text="@string/Temperature"/>
                    <ImageView
                        android:id="@+id/imgView_3"
                        android:layout_below="@+id/whetherTitle_3"
                        android:layout_marginTop="@dimen/size20dp"
                        android:layout_width="@dimen/size60dp"
                        android:layout_height="@dimen/size60dp"
                        android:src="@drawable/weather_icon"
                        android:layout_centerInParent="true"/>
                    <TextView
                        android:id="@+id/temperatureValue_3"
                        android:layout_below="@+id/imgView_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/value"
                        android:textSize="@dimen/text30sp"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_newdelhi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size10dp"
                    android:layout_marginTop="@dimen/size10dp"
                    android:layout_marginRight="@dimen/size20dp"
                    android:layout_marginBottom="@dimen/size20dp"
                    android:background="@drawable/editloginshape"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/cityTitle_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/size20dp"
                        android:text="@string/NEW_DELHI"
                        android:textSize="@dimen/text18sp"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/whetherTitle_4"
                        android:layout_below="@+id/cityTitle_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorWhite"
                        android:text="@string/Temperature"/>
                    <ImageView
                        android:id="@+id/imgView_4"
                        android:layout_below="@+id/whetherTitle_4"
                        android:layout_marginTop="@dimen/size20dp"
                        android:layout_width="@dimen/size60dp"
                        android:layout_height="@dimen/size60dp"
                        android:src="@drawable/weather_icon"
                        android:layout_centerInParent="true"/>
                    <TextView
                        android:id="@+id/temperatureValue_4"
                        android:layout_below="@+id/imgView_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size10dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/value"
                        android:textSize="@dimen/text30sp"
                        android:textColor="@color/colorWhite"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>
